2006-01-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* console.c (main): Check CONS instead of MALLOC.

	* input.c (input_create): Fix arguments order of iconv_open()
	call.
	
2005-01-19  Marco Gerards   <metgerards@student.han.nl>

	* README.UTF8: New file.
	* motd.UTF8: Likewise.

2003-04-29  Marco Gerards   <metgerards@student.han.nl>

	* display.c (display_create): Added arguments width, height and
	lines, variables with the same name were removed.
	* display.h (display_creat): Add missing arguments to prototype.
	* console.c (DEFAULT_WIDTH): New macro.
	(DEFAULT_HEIGHT): Likewise.
	(DEFAULT_LINES): Likewise.
	(STRX): Likewise.
	(STR): Likewise.
	(struct cons): New members lines, width and height.
	(vcons_lookup): Add missing arguments to display_create.
	(options): Add options width, height and lines.
	(parse_opt): Parse width, height and lines.
	(netfs_append_args): Append arguments width, height and lines.
	(netfs_append_args): Fix asprintf error checking.
	(main): Initialize cons with default width, height and lines.

2002-12-10  Marcus Brinkmann  <marcus@gnu.org>

	* console.c (main): Don't use err without setting it.

2002-10-10  Marcus Brinkmann  <marcus@gnu.org>

	* hurd.ti (cub1): Change from \E[D to ^H.
	* display.c (handle_esc_bracket): Revert last change.

	* display.c (handle_esc_bracket): Implement <bw> for <cub1>.

2002-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c, pager.h: New file.
	* Makefile (SRCS): Add pager.c.
	(LCLHDRS): Add pager.h.
	* display.c: Do not include <hurd/pager.h>, <sys/mman.h>,
	<sys/io.h>, <fcntl.h> and <sys/fcntl.h>.  Include <hurd/ports.h>
	and "pager.h".
	(struct display): Replace member PAGER and MEMOBJ with USER_PAGER.
	(display_get_filemap): Implement with user_pager_get_filemap.
	(user_destroy): Implement with user_pager_destroy.
	(user_create): Implement partially with user_create.
	(display_init): Call user_pager_init.
	(struct user_pager_info, pager_bucket, pager_clear_user_data,